# todo_app

./: README.md  docker-compose.yml
backend/: Dokerfile  pyproject.toml  todo.db
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/repositories/: task_repo.py
backend/app/routers/: tasks.py
backend/app/services/: task_service.py
frontend/: .gitignore  Dokerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: tasks.ts
frontend/src/components/: DeleteDialog.tsx  TaskFilter.tsx  TaskForm.tsx  TaskList.tsx
frontend/src/hooks/: useTasks.ts
frontend/src/types/: task.ts
